<?xml version="1.0"?>
<package>
  <name>agv_description</name>
  <version>0.0.0</version>
  <description>The agv_description package</description>

  <maintainer email="hakan.gencturk@inovasyonmuhendislik.com">Hakan GENCTURK</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
